--- a/RPGHAME/RPGHAME.csproj
+++ b/RPGHAME/RPGHAME.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5D389DB2-9829-4123-8964-7AE1942EC124}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RPGHAME</RootNamespace>
-    <AssemblyName>RPGHAME</AssemblyName>
+    <RootNamespace>RPGGAME</RootNamespace>
+    <AssemblyName>RPGGame</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
@@ -39,8 +39,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="Input.cs" />
+    <Compile Include="Usables\Animations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usables\AssetManager.cs" />
+    <Compile Include="Usables\Input.cs" />
+    <Compile Include="Usables\MenyEntry.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
