--- a/RPGGAME/RPGHAME.csproj
+++ b/RPGGAME/RPGHAME.csproj
@@ -40,6 +40,9 @@
   <ItemGroup>
     <Compile Include="Game1.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="PlayerManager.cs" />
+    <Compile Include="Players\PlayerBase\EntityBase.cs" />
+    <Compile Include="Players\Player.cs" />
     <Compile Include="Usables\Animations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
