--- a/RPGGAME/RPGGAME.csproj
+++ b/RPGGAME/RPGGAME.csproj
@@ -14,6 +14,8 @@
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
     </MonoGameContentBuilderExe>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -24,6 +26,7 @@
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -33,19 +36,28 @@
     <DefineConstants>TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BaseScreen.cs" />
-    <Compile Include="DebugScreen.cs" />
-    <Compile Include="Game1.cs" />
-    <Compile Include="ScreenManager.cs" />
+    <Compile Include="ItemFactory\Base Item\Armor\Interfaces\ArmorRequirments.cs" />
+    <Compile Include="ItemFactory\Base Item\Armor\Interfaces\ItemTypeTier.cs" />
+    <Compile Include="ItemFactory\Base Item\BaseItem.cs" />
+    <Compile Include="IAttributes.cs" />
+    <Compile Include="ItemFactory\ItemFactory.cs" />
+    <Compile Include="LegendaryPotions.cs" />
+    <Compile Include="IEntity.cs" />
+    <Compile Include="Screens\BaseScreen\BaseScreen.cs" />
+    <Compile Include="Usables\DrawColoredStrings.cs" />
+    <Compile Include="Screens\MainMenu.cs" />
+    <Compile Include="Managers\ScreenManager.cs" />
+    <Compile Include="Main\Game1.cs" />
     <Compile Include="Usables\Animations.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usables\AssetManager.cs" />
+    <Compile Include="Managers\AssetManager.cs" />
     <Compile Include="Usables\Input.cs" />
     <Compile Include="Usables\MenyEntry.cs" />
   </ItemGroup>
@@ -61,6 +73,12 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Content\Arial_16.spritefont">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
